--- a/config.yaml
+++ b/config.yaml
@@ -123,9 +123,13 @@ php:
             - cli
             - intl
             - mcrypt
+            - gd
+            - mbstring
         pear: {  }
         pecl:
             - pecl_http
+            - APC
+            - uploadprogress
     ini:
         display_errors: On
         error_reporting: '-1'
